--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="title_address">地址</string>
     <string name="tip_modWechatCode">请上传微信收款码:</string>
     <string name="tip_modAlipayCode">请上传支付宝收款码:</string>
+    <string name="tip_modBankCard">请上传银行卡:</string>
     <string name="sure">确定</string>
     <string name="cancel">取消</string>
 
