--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="title_current_average_price">今日均价(GCM/CNY)</string>
     <string name="title_current_high_price">今日最高(GCM/CNY)</string>
     <string name="title_float_ratio">浮动比例</string>
+    <string name="load_more_data">加载更多数据...</string>
+    <string name="loading_data">数据加载中...</string>
+    <string name="no_more_data">没有更多信息了！</string>
     <string name="title_dashboard">生态</string>
     <string name="title_notifications">资产</string>
     <string name="title_extends">我的</string>
