--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="prompt_password">请输入密码</string>
     <string name="prompt_set2ndpwd">请输入6位数字密码</string>
     <string name="prompt_confirmpwd">请再次输入密码</string>
+    <string name="prompt_input_num">请输入数量</string>
+    <string name="prompt_min_price">请输入最小限额</string>
     <string name="prompt_address">请输入地址</string>
     <string name="prompt_coincount">请输入数量，至少100币,手续费5%</string>
     <string name="prompt_2ndpwd">请输入二级密码</string>
@@ -16,6 +18,7 @@
     <string name="action_sign_in_short">登录</string>
     <string name="action_transfer">转账</string>
     <string name="action_set2ndpwd">设置二级密码</string>
+    <string name="action_publish_confirm">确认发布</string>
     <string name="action_exit">退出</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">用户名不合法！</string>
