--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,9 @@
     <string name="bt_order">订单</string>
 
     <string name="sell">出售</string>
+    <string name="cfm_sell">确认出售</string>
     <string name="buy">购买</string>
+    <string name="cfm_buy">确认购买</string>
 
     <string name="sell_detail">出售详情</string>
     <string name="buy_detail">购买详情</string>
